Tried to fix horizontal whitespace

--- a/styles.css
+++ b/styles.css
@@ -11709,15 +11709,18 @@ textarea.form-control-lg {
 }
 
 #portfolio{
-
-width: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+  width: 100%;
   font-size: 8.5vw;
 }
 
 #projects{
-width: 100%;
+  width: 100%;
   font-size: 3vw;
   margin-bottom: 3rem;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 #main-section {
@@ -11746,6 +11749,8 @@ width: 100%;
   animation-duration: 3s;
   animation-name: fadein;
   animation-iteration-count: infinite;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 .fa-angle-down:hover{
   cursor:pointer;
@@ -11908,13 +11913,14 @@ width: 100%;
 }
 /*# sourceMappingURL=bootstrap.min.css.map */
 
-.top-buttons{
-  width = 100%;
+.top-buttons {
   display: flex;
-  margin-left: 31.5%;
-  margin-right: 31.5%;
+  justify-content: center; /* Center flex items horizontally */
   margin-bottom: 3vw;
+  padding-left: 0px;
+  padding-right: 0px;
 }
+
 
 .top-buttons-two{
   font-size: 3vw;
